# git-kpis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
git_kpis/: git_kpis.py  github_client.py  logging.py
tests/: test_miovision_git_metrics.py
